; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_parse.c_parse_notes.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_parse.c_parse_notes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TOKEN_AT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_notes() #0 {
  %1 = alloca i32*, align 8
  store i32* null, i32** %1, align 8
  br label %2

2:                                                ; preds = %6, %0
  %3 = load i32, i32* @TOKEN_AT, align 4
  %4 = call i64 @match_token(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %2
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 (...) @parse_note()
  %9 = call i32 @buf_push(i32* %7, i32 %8)
  br label %2

10:                                               ; preds = %2
  %11 = load i32*, i32** %1, align 8
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @buf_len(i32* %12)
  %14 = call i32 @new_notes(i32* %11, i32 %13)
  ret i32 %14
}

declare dso_local i64 @match_token(i32) #1

declare dso_local i32 @buf_push(i32*, i32) #1

declare dso_local i32 @parse_note(...) #1

declare dso_local i32 @new_notes(i32*, i32) #1

declare dso_local i32 @buf_len(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
